# ESE-Electrical-Schemes-Editor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
assets/branding/: icon-manifest.json
docs/: ALPHA18_BASELINE.md  ESE_JSON_INTERCHANGE.md  ESE_PROJECT_FORMAT.md  OTA_UPDATES.md  PRIVACY.md  RELEASE_NOTES_0.1.0-beta.1.md  RELEASE_NOTES_0.1.0-beta.2.md  RELEASE_NOTES_0.1.0-beta.3.md  RELEASE_ROADMAP.md
scripts/: check-release-version.mjs  create-tutorial-project.mjs  ocr-benchmark.mjs
src/: app-update.ts  app-version.ts  archive.ts  export-html.ts  html-project.ts  json-interchange.ts  main.ts  ocr.ts  page-selection.ts  page-view.ts  pdf-import.ts  project-factory.ts  project-import.ts  project-normalization.ts  project-pages.ts  session-recovery.ts  styles.css  trace-edit.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_updates.rs  lib.rs  main.rs  recovery.rs  share.rs
tests/: app-version.test.mjs  export-html.test.mjs  interchange.test.mjs  ocr.test.mjs  page-selection.test.mjs  page-view.test.mjs  project-factory.test.mjs  project-pages.test.mjs  trace-edit.test.mjs
tests/fixtures/: synthetic-project.mjs
tests/fixtures/ocr/: README.md
website/: index.htm  site.js  styles.css
