[package]
name = "ese"
version = "0.1.0-beta.1"
description = "Electrical Schemes Editor"
authors = ["Nibin Naug"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NibinNaug/ESE-Electrical-Schemes-Editor"
homepage = "https://nibin.naug.free.fr/prog/ese/"
edition = "2021"

[lib]
name = "ese_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
