[package]
name = "ese"
version = "0.1.0-beta.3"
description = "Electrical Schematics Enlightener"
authors = ["Nibin Naug"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NibinNaug/ESE-Electrical-Schematics-Enlightener"
homepage = "https://nibin-naug.pages-perso.free.fr/prog/ese/"
edition = "2021"

[lib]
name = "ese_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
url = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
